--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div id="details-area">
         </div>
 
-        <div id="result-area" class="row row-cols-1 row-cols-md-3 g-4">
+        <div id="result-area" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
           </div>
     </main>
 
